# AudioSave

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/audiosave/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/engine/: AudioInputEngine.cpp  AudioInputEngine.h  AudioSaveEngine.cpp  AudioSaveEngine.h
app/src/main/java/com/example/audiosave/: AudioEngine.java  MainActivity.java  PermissionActivity.java  PreferredMic.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/audiosave/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
